Added KMapper support.

--- a/DNNApproach.ipynb
+++ b/DNNApproach.ipynb
@@ -251,8 +251,10 @@
     "concat_input = Concatenate()([user_vector, movie_vector])\n",
     "\n",
     "# model is shallow MLP\n",
-    "dense = Dense(256)(concat_input)\n",
-    "y = Dense(1)(dense)"
+    "dense1 = Dense(256)(concat_input)\n",
+    "dropout1 = Dropout(0.5)(dense1, training=True)\n",
+    "dense2 = Dense(32)(dropout1)\n",
+    "y = Dense(1)(dense2)"
    ]
   },
   {
@@ -265,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7169/7169 [==============================] - 14s 2ms/step - loss: 0.8962 - val_loss: 0.8193\n"
+      "7169/7169 [==============================] - 18s 2ms/step - loss: 0.8841 - val_loss: 0.8248\n"
      ]
     }
    ],
@@ -304,8 +306,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE on test set: 0.8221831156594356\n",
-      "RMSE on test set: 0.9067431365383669\n"
+      "MSE on test set: 0.8177500384141613\n",
+      "RMSE on test set: 0.9042953269890104\n"
      ]
     }
    ],
@@ -319,11 +321,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ed6df2f2",
+   "execution_count": 15,
+   "id": "8baf460c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_forward_passes = 5\n",
+    "recommend_threshold = 0.75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c35edf1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recommend_preds shape: (5, 100000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend_preds = []\n",
+    "for i in range(n_forward_passes):\n",
+    "    y_pred = model.predict([test_user_data, test_movie_data])\n",
+    "\n",
+    "    recommend_pred = np.squeeze(y_pred)\n",
+    "    min_pred = np.min(recommend_pred)\n",
+    "    max_pred = np.max(recommend_pred)\n",
+    "    recommend_pred = (recommend_pred - min_pred) / (max_pred - min_pred)\n",
+    "    recommend_preds.append(recommend_pred)\n",
+    "\n",
+    "recommend_preds = np.array(recommend_preds)\n",
+    "print(f\"recommend_preds shape: {recommend_preds.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e3ec2354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recommend_true shape: (100000, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend_true = np.squeeze(y_true) / 5\n",
+    "recommend_true = recommend_true >= recommend_threshold\n",
+    "recommend_true = np.intp(recommend_true).astype(np.float32)\n",
+    "recommend_true = np.expand_dims(recommend_true, axis=1)\n",
+    "print(f\"recommend_true shape: {recommend_true.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "01e3b330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculating statistics\n",
+    "recommend_std = np.std(recommend_preds, axis=0).reshape(-1, 1)\n",
+    "recommend_mean = np.mean(recommend_preds, axis=0).reshape(-1, 1)\n",
+    "recommend_modus = (np.mean(recommend_preds >= recommend_threshold, axis=0) >= recommend_threshold).reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "193bcc96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ensuring equality of shapes\n",
+    "assert recommend_std.shape == recommend_mean.shape\n",
+    "assert recommend_std.shape == recommend_modus.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e479d7dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intermediate shape: (100000, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating submodel for gathering intermediate activations\n",
+    "dense_1_model = Model(inputs=model.input, outputs=model.get_layer(\"dense_1\").output)\n",
+    "intermediate_preds = dense_1_model.predict([test_user_data, test_movie_data])\n",
+    "print(f\"Intermediate shape: {intermediate_preds.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "677de7d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Projection shape: (100000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "projection_preds = np.c_[recommend_std, np.abs(recommend_true - recommend_mean)]\n",
+    "print(f\"Projection shape: {projection_preds.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c2864063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import kmapper as km\n",
+    "from sklearn.cluster import AgglomerativeClustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb2f378c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KeplerMapper(verbose=2)\n",
+      "Mapping on data shaped (100000, 32) using lens shaped (100000, 2)\n",
+      "\n",
+      "Minimal points in hypercube before clustering: 2\n",
+      "Creating 100 hypercubes.\n",
+      "   > Found 2 clusters in hypercube 0.\n",
+      "   > Found 2 clusters in hypercube 1.\n",
+      "   > Found 2 clusters in hypercube 2.\n",
+      "   > Found 2 clusters in hypercube 3.\n",
+      "   > Found 2 clusters in hypercube 4.\n",
+      "   > Found 2 clusters in hypercube 5.\n",
+      "   > Found 2 clusters in hypercube 6.\n",
+      "   > Found 2 clusters in hypercube 7.\n",
+      "   > Found 2 clusters in hypercube 8.\n",
+      "   > Found 2 clusters in hypercube 9.\n",
+      "   > Found 2 clusters in hypercube 10.\n",
+      "   > Found 2 clusters in hypercube 11.\n",
+      "   > Found 2 clusters in hypercube 12.\n",
+      "   > Found 2 clusters in hypercube 13.\n",
+      "   > Found 2 clusters in hypercube 14.\n",
+      "   > Found 2 clusters in hypercube 15.\n",
+      "   > Found 2 clusters in hypercube 16.\n",
+      "   > Found 2 clusters in hypercube 17.\n",
+      "   > Found 2 clusters in hypercube 18.\n",
+      "   > Found 2 clusters in hypercube 19.\n",
+      "   > Found 2 clusters in hypercube 20.\n",
+      "   > Found 2 clusters in hypercube 21.\n",
+      "   > Found 2 clusters in hypercube 22.\n",
+      "   > Found 2 clusters in hypercube 23.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapper = km.KeplerMapper(verbose=2)\n",
+    "G = mapper.map(projection_preds,\n",
+    "               intermediate_preds,\n",
+    "               clusterer=AgglomerativeClustering(n_clusters=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c36c83ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: use these colors somehow mapper\n",
+    "colors = np.sqrt((recommend_true - recommend_mean) ** 2)\n",
+    "colors = np.squeeze(colors).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fece0ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = mapper.visualize(G,\n",
+    "                     lens=projection_preds,\n",
+    "                     lens_names=[\"STD\", \"L1\"],\n",
+    "                     title=\"STD vs. L1\",\n",
+    "                     path_html=\"visualization.html\")"
+   ]
   }
  ],
  "metadata": {
