--- a/DNNApproach.ipynb
+++ b/DNNApproach.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2151e102",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c1833a27",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7750c3e2",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bb72de4d",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "302bc166",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "de4d96f8",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,8 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b1b53f60",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,8 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "31f998f8",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,8 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "66b05017",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +187,9 @@
    "source": [
     "# will map all IDs to [0, N]\n",
     "user_id_mapping = {unique_id: i for i, unique_id in enumerate(df_filtered[\"User\"].unique())}\n",
+    "user_id_unmapping = {i: unique_id for i, unique_id in enumerate(df_filtered[\"User\"].unique())}\n",
     "movie_id_mapping = {unique_id: i for i, unique_id in enumerate(df_filtered[\"Movie\"].unique())}\n",
+    "movie_id_unmapping = {i: unique_id for i, unique_id in enumerate(df_filtered[\"Movie\"].unique())}\n",
     "\n",
     "train_user_data = df_train[\"User\"].map(user_id_mapping)\n",
     "train_movie_data = df_train[\"Movie\"].map(movie_id_mapping)\n",
@@ -214,8 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5605dd32",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,8 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e60592dc",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,15 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8fd9cb8b",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7169/7169 [==============================] - 18s 2ms/step - loss: 0.8841 - val_loss: 0.8248\n"
+      "7169/7169 [==============================] - 75s 9ms/step - loss: 1.1187 - val_loss: 0.8259\n"
      ]
     }
    ],
@@ -287,8 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "9ed3d9e1",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,16 +287,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6fb77a30",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE on test set: 0.8177500384141613\n",
-      "RMSE on test set: 0.9042953269890104\n"
+      "MSE on test set: 0.8305469153993164\n",
+      "RMSE on test set: 0.9113434673048995\n"
      ]
     }
    ],
@@ -321,8 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8baf460c",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,8 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c35edf1b",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -361,8 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e3ec2354",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -383,8 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "01e3b330",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,8 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "193bcc96",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,8 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "e479d7dc",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -429,8 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "677de7d9",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -448,8 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c2864063",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,8 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb2f378c",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -490,12 +469,66 @@
       "   > Found 2 clusters in hypercube 15.\n",
       "   > Found 2 clusters in hypercube 16.\n",
       "   > Found 2 clusters in hypercube 17.\n",
-      "   > Found 2 clusters in hypercube 18.\n",
+      "Cube_18 is empty.\n",
+      "\n",
       "   > Found 2 clusters in hypercube 19.\n",
       "   > Found 2 clusters in hypercube 20.\n",
       "   > Found 2 clusters in hypercube 21.\n",
       "   > Found 2 clusters in hypercube 22.\n",
-      "   > Found 2 clusters in hypercube 23.\n"
+      "   > Found 2 clusters in hypercube 23.\n",
+      "   > Found 2 clusters in hypercube 24.\n",
+      "   > Found 2 clusters in hypercube 25.\n",
+      "   > Found 2 clusters in hypercube 26.\n",
+      "   > Found 2 clusters in hypercube 27.\n",
+      "   > Found 2 clusters in hypercube 28.\n",
+      "   > Found 2 clusters in hypercube 29.\n",
+      "   > Found 2 clusters in hypercube 30.\n",
+      "   > Found 2 clusters in hypercube 31.\n",
+      "   > Found 2 clusters in hypercube 32.\n",
+      "   > Found 2 clusters in hypercube 33.\n",
+      "   > Found 2 clusters in hypercube 34.\n",
+      "   > Found 2 clusters in hypercube 35.\n",
+      "   > Found 2 clusters in hypercube 36.\n",
+      "   > Found 2 clusters in hypercube 37.\n",
+      "   > Found 2 clusters in hypercube 38.\n",
+      "   > Found 2 clusters in hypercube 39.\n",
+      "   > Found 2 clusters in hypercube 40.\n",
+      "   > Found 2 clusters in hypercube 41.\n",
+      "   > Found 2 clusters in hypercube 42.\n",
+      "   > Found 2 clusters in hypercube 43.\n",
+      "   > Found 2 clusters in hypercube 44.\n",
+      "   > Found 2 clusters in hypercube 45.\n",
+      "   > Found 2 clusters in hypercube 46.\n",
+      "   > Found 2 clusters in hypercube 47.\n",
+      "   > Found 2 clusters in hypercube 48.\n",
+      "   > Found 2 clusters in hypercube 49.\n",
+      "   > Found 2 clusters in hypercube 50.\n",
+      "   > Found 2 clusters in hypercube 51.\n",
+      "   > Found 2 clusters in hypercube 52.\n",
+      "   > Found 2 clusters in hypercube 53.\n",
+      "   > Found 2 clusters in hypercube 54.\n",
+      "   > Found 2 clusters in hypercube 55.\n",
+      "   > Found 2 clusters in hypercube 56.\n",
+      "   > Found 2 clusters in hypercube 57.\n",
+      "   > Found 2 clusters in hypercube 58.\n",
+      "   > Found 2 clusters in hypercube 59.\n",
+      "   > Found 2 clusters in hypercube 60.\n",
+      "   > Found 2 clusters in hypercube 61.\n",
+      "   > Found 2 clusters in hypercube 62.\n",
+      "   > Found 2 clusters in hypercube 63.\n",
+      "   > Found 2 clusters in hypercube 64.\n",
+      "   > Found 2 clusters in hypercube 65.\n",
+      "   > Found 2 clusters in hypercube 66.\n",
+      "Cube_67 is empty.\n",
+      "\n",
+      "Cube_68 is empty.\n",
+      "\n",
+      "Cube_69 is empty.\n",
+      "\n",
+      "   > Found 2 clusters in hypercube 70.\n",
+      "   > Found 2 clusters in hypercube 71.\n",
+      "\n",
+      "Created 269 edges and 136 nodes in 0:03:01.839563.\n"
      ]
     }
    ],
@@ -508,36 +541,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c36c83ef",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: use these colors somehow mapper\n",
-    "colors = np.sqrt((recommend_true - recommend_mean) ** 2)\n",
-    "colors = np.squeeze(colors).tolist()"
+    "tooltip_s = []\n",
+    "for movie_id, user_id in zip(test_movie_data, test_user_data):\n",
+    "    movie_name = str(movie_titles.iloc[movie_id_unmapping.get(movie_id)]['Name'])\n",
+    "    info = \"\"\"<div style=\"width:200px;\n",
+    "                             height:30px;\n",
+    "                             overflow-x:hidden;\n",
+    "                             overflow-y:auto;\n",
+    "                             float:left;\n",
+    "                             position: relative;\">\n",
+    "                 <div style=\"position: relative; top:0; right:0; font-size:10px\">Movie Name: %s</div>\n",
+    "                 <div style=\"position: relative; top: 0; right: 0; font-size:10px\">User ID: %s</div>\n",
+    "                 </div>\"\"\" % ((movie_name, user_id))\n",
+    "    tooltip_s.append(info)\n",
+    "tooltip_s = np.array(tooltip_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote visualization to: visualization.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "_ = mapper.visualize(G,\n",
+    "                     lens=projection_preds,\n",
+    "                     lens_names=[\"STD\", \"L1\"],\n",
+    "                     custom_tooltips=tooltip_s,\n",
+    "                     title=\"STD vs. L1\",\n",
+    "                     path_html=\"visualization.html\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fece0ef",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "_ = mapper.visualize(G,\n",
-    "                     lens=projection_preds,\n",
-    "                     lens_names=[\"STD\", \"L1\"],\n",
-    "                     title=\"STD vs. L1\",\n",
-    "                     path_html=\"visualization.html\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "netflix38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "netflix38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -549,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
