Added recommender and finalized visualization.

--- a/DNNApproach.ipynb
+++ b/DNNApproach.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "c27f856b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "id": "dcc69a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "id": "f175bb9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "4db3ceb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "id": "e88ba6fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "id": "c9bd9194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "id": "d3c89f30",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "id": "e0e9fc6b",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
+   "id": "803e1aff",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
+   "id": "c37a5a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
+   "id": "78a83149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,14 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
+   "id": "e7422745",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7169/7169 [==============================] - 75s 9ms/step - loss: 1.1187 - val_loss: 0.8259\n"
+      "7169/7169 [==============================] - 18s 3ms/step - loss: 0.8853 - val_loss: 0.8307\n"
      ]
     }
    ],
@@ -277,7 +289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
+   "id": "eac670fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,15 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
+   "id": "730aa689",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE on test set: 0.8305469153993164\n",
-      "RMSE on test set: 0.9113434673048995\n"
+      "MSE on test set: 0.8269846431612831\n",
+      "RMSE on test set: 0.9093869600787572\n"
      ]
     }
    ],
@@ -309,7 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
+   "id": "06c28a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
+   "id": "1b339985",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
+   "id": "629915cd",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
+   "id": "18c1ca73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
+   "id": "dc97afd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +410,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "id": "acabcd43",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
+   "id": "cff29830",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
+   "id": "e26c33d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
+   "id": "631d125c",
    "metadata": {},
    "outputs": [
     {
@@ -469,8 +492,7 @@
       "   > Found 2 clusters in hypercube 15.\n",
       "   > Found 2 clusters in hypercube 16.\n",
       "   > Found 2 clusters in hypercube 17.\n",
-      "Cube_18 is empty.\n",
-      "\n",
+      "   > Found 2 clusters in hypercube 18.\n",
       "   > Found 2 clusters in hypercube 19.\n",
       "   > Found 2 clusters in hypercube 20.\n",
       "   > Found 2 clusters in hypercube 21.\n",
@@ -519,16 +541,20 @@
       "   > Found 2 clusters in hypercube 64.\n",
       "   > Found 2 clusters in hypercube 65.\n",
       "   > Found 2 clusters in hypercube 66.\n",
-      "Cube_67 is empty.\n",
-      "\n",
-      "Cube_68 is empty.\n",
-      "\n",
+      "   > Found 2 clusters in hypercube 67.\n",
+      "   > Found 2 clusters in hypercube 68.\n",
       "Cube_69 is empty.\n",
       "\n",
-      "   > Found 2 clusters in hypercube 70.\n",
-      "   > Found 2 clusters in hypercube 71.\n",
+      "Cube_70 is empty.\n",
       "\n",
-      "Created 269 edges and 136 nodes in 0:03:01.839563.\n"
+      "   > Found 2 clusters in hypercube 71.\n",
+      "   > Found 2 clusters in hypercube 72.\n",
+      "   > Found 2 clusters in hypercube 73.\n",
+      "   > Found 2 clusters in hypercube 74.\n",
+      "Cube_75 is empty.\n",
+      "\n",
+      "\n",
+      "Created 292 edges and 146 nodes in 0:01:39.472810.\n"
      ]
     }
    ],
@@ -541,29 +567,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
+   "id": "d89c4673",
    "metadata": {},
    "outputs": [],
    "source": [
     "tooltip_s = []\n",
-    "for movie_id, user_id in zip(test_movie_data, test_user_data):\n",
+    "for i, (movie_id, user_id) in enumerate(zip(test_movie_data, test_user_data)):\n",
     "    movie_name = str(movie_titles.iloc[movie_id_unmapping.get(movie_id)]['Name'])\n",
-    "    info = \"\"\"<div style=\"width:200px;\n",
+    "    info = f\"\"\"<div style=\"width:200px;\n",
     "                             height:30px;\n",
     "                             overflow-x:hidden;\n",
     "                             overflow-y:auto;\n",
     "                             float:left;\n",
     "                             position: relative;\">\n",
-    "                 <div style=\"position: relative; top:0; right:0; font-size:10px\">Movie Name: %s</div>\n",
-    "                 <div style=\"position: relative; top: 0; right: 0; font-size:10px\">User ID: %s</div>\n",
-    "                 </div>\"\"\" % ((movie_name, user_id))\n",
+    "                 <div style=\"position: relative; top:0; right:0; font-size:10px\">Movie Name: {movie_name}</div>\n",
+    "                 <div style=\"position: relative; top: 0; right: 0; font-size:10px\">User ID: {user_id}</div>\n",
+    "                 <div style=\"position: relative; top: 0; right: 0; font-size:10px\">Recommendation: {recommend_mean[i] >= recommend_threshold}</div>\n",
+    "                 </div>\"\"\"\n",
     "    tooltip_s.append(info)\n",
     "tooltip_s = np.array(tooltip_s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
+   "id": "2bce85ac",
    "metadata": {},
    "outputs": [
     {
@@ -586,6 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "039c6cfa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -593,9 +623,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "netflix38",
    "language": "python",
-   "name": "python3"
+   "name": "netflix38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -607,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
